--- a/config/config.yml
+++ b/config/config.yml
@@ -147,4 +147,22 @@ applications:
                 password: ''
             paypal_sandbox: *paypalSandbox
             paypal_developer: *paypalDeveloper
+    magento2community: &magento2community
+        fallbackOrderFixture: 'magento2ce, default'
+        fallbackOrderHelper: 'Magento2CE, Core'
+        areas:
+            admin:
+                url: 'http://www.localhost.com/magento2_community/control/'
+                base_page_uimap: 'log_in_to_admin'
+                uimap_path: 'admin'
+                login: 'admin'
+                password: '123123q'
+            frontend:
+                url: 'http://www.localhost.com/magento2_community/'
+                base_page_uimap: 'home_page'
+                uimap_path: 'frontend'
+                login: ''
+                password: ''
+            paypal_sandbox: *paypalSandbox
+            paypal_developer: *paypalDeveloper
     default: *enterprise
